deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iot-api
spec:
  replicas: 2
  selector:
    matchLabels:
      run: iot-api
  template:
    metadata:
      labels:
        run: iot-api
    spec:
      containers:
      - name: iot-monitoring-api
        image: antoniogodoy17/iot-monitoring-api
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: iot-api
spec:
  selector:
    run: iot-api
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
