ingress-iot.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iot-ingress
  namespace: jose
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: jose.pjdtest.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: iot-api
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: iot-app
            port:
              number: 80
